created new cluster_images to get rgb image from point cloud for object recognisition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,8 +202,8 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-add_executable(cluster_distances src/cluster_distances.cpp)
-target_link_libraries(cluster_distances ${catkin_LIBRARIES})
+#add_executable(cluster_distances src/cluster_distances.cpp)
+#target_link_libraries(cluster_distances ${catkin_LIBRARIES})
 
 #add_executable(cluster_extraction src/cluster_extraction.cpp)
 #target_link_libraries(cluster_extraction ${catkin_LIBRARIES})
@@ -216,3 +216,6 @@ target_link_libraries(cluster_distances ${catkin_LIBRARIES})
 
 add_executable(convert_pointcloud_to_image src/convert_pointcloud_to_image.cpp)
 target_link_libraries(convert_pointcloud_to_image ${catkin_LIBRARIES})
+
+add_executable(cluster_images src/cluster_images.cpp)
+target_link_libraries(cluster_images ${catkin_LIBRARIES})
